--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -14,6 +14,6 @@ jobs:
             - name: Build image
               run: docker build . --file Dockerfile --tag ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
             - name: Log in to Registry
-              run: docker login --username ${USERNAME} --password ${{ secrets.GITHUB_TOKEN }} ${REGISTRY_URL}
+              run: docker login --username ${USERNAME} --password ${{ secrets.GH_TOKEN }} ${REGISTRY_URL}
             - name: Push image
               run: docker push ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
