--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -14,6 +14,8 @@ jobs:
             - name: Build image
               run: docker build . --file Dockerfile --tag ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
             - name: Log in to Registry
-              run: docker login --username ${USERNAME} --password ${{ secrets.GH_TOKEN }} ${REGISTRY_URL}
+              env:
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+              run: docker login --username ${USERNAME} --password ${GH_TOKEN} ${REGISTRY_URL}
             - name: Push image
               run: docker push ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
