--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,20 +1,21 @@
 name: test-workflow
 on:
     workflow_dispatch:
+env:
+    USERNAME: m-rakic-vegait
+    IMAGE_NAME: test-devops-app
+    REGISTRY_URL: ghcr.io
+    # GH_TOKEN: ${{ secrets.GH_TOKEN }}
 jobs:
     build-and-push-image:
         runs-on: ubuntu-latest
-        env:
-            USERNAME: m-rakic-vegait
-            IMAGE_NAME: test-devops-app
-            REGISTRY_URL: ghcr.io
-            GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        environment: test-devops-env
         steps:
             - name: Checkout the repo
               uses: actions/checkout@v4
             - name: Build image
               run: docker build . --file Dockerfile --tag ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
             - name: Log in to Registry
-              run: echo ${GH_TOKEN} | docker login ${REGISTRY_URL} --username ${USERNAME} --password-stdin
+              run: echo ${{ env.GH_TOKEN }} | docker login $REGISTRY_URL --username $USERNAME --password-stdin
             - name: Push image
               run: docker push ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
