--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,17 +1,17 @@
 name: test-workflow
 on:
     workflow_dispatch:
-env:
-    USERNAME: m-rakic-vegait
-    IMAGE_NAME: test-devops-app
-    REGISTRY_URL: ghcr.io
-    GH_TOKEN: ${{ secrets.GH_TOKEN }}
+# env:
+#     USERNAME: m-rakic-vegait
+#     IMAGE_NAME: test-devops-app
+#     REGISTRY_URL: ghcr.io
+#     GH_TOKEN: ${{ secrets.GH_TOKEN }}
 jobs:
     build-and-push-image:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout the repo
-              uses: actions/checkout@v4
+            # - name: Checkout the repo
+            #   uses: actions/checkout@v4
             - name: Build image
               run: |
                   echo GH_TOKEN: ${{ secrets.GH_TOKEN }}
