--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,28 +1,22 @@
 name: test-workflow
 on:
-    workflow_dispatch:
-        inputs:
-            testdevopssecret:
-                type: string
-                required: true
-                description: 'test access secrets'
-                default: ${{ github.env.TEST_DEVOPS_SECRET }}
+    workflow_call:
 # env:
 #     USERNAME: m-rakic-vegait
 #     IMAGE_NAME: test-devops-app
 #     REGISTRY_URL: ghcr.io
-#     GH_TOKEN: ${{ secrets.GH_TOKEN }}
 jobs:
     build-and-push-image:
         runs-on: ubuntu-latest
+        environment: test-devops-env
         steps:
-            # - name: Checkout the repo
-            #   uses: actions/checkout@v4
+            - name: Checkout the repo
+              uses: actions/checkout@v4
             - name: Build image
               run: |
                   echo GH_TOKEN: ${{ secrets.GH_TOKEN }}
                   echo MY_SECRET: ${{ secrets.MY_SECRET }}
-                  echo TEST_DEVOPS_SECRET: ${{ inputs.testdevopssecret }}
+                  echo TEST_DEVOPS_SECRET: ${{ inputs.TEST_DEVOPS_SECRET }}
                   echo GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             # - name: Log in to Registry
             #   run: |
