--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,6 +1,6 @@
 name: test-workflow
 on:
-    workflow_call:
+    workflow_dispatch:
 # env:
 #     USERNAME: m-rakic-vegait
 #     IMAGE_NAME: test-devops-app
