--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,10 +1,10 @@
 name: test-workflow
 on:
     workflow_dispatch:
-# env:
-#     USERNAME: m-rakic-vegait
-#     IMAGE_NAME: test-devops-app
-#     REGISTRY_URL: ghcr.io
+env:
+    USERNAME: m-rakic-vegait
+    IMAGE_NAME: test-devops-app
+    REGISTRY_URL: ghcr.io
 jobs:
     build-and-push-image:
         runs-on: ubuntu-latest
@@ -16,8 +16,10 @@ jobs:
               run: |
                   echo GH_TOKEN: ${{ secrets.GH_TOKEN }}
                   echo MY_SECRET: ${{ secrets.MY_SECRET }}
-                  echo TEST_DEVOPS_SECRET: ${{ inputs.TEST_DEVOPS_SECRET }}
+                  echo TEST_DEVOPS_SECRET: ${{ secrets.TEST_DEVOPS_SECRET }}
                   echo GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  echo REGISTRY_URL: ${REGISTRY_URL}
+                  echo USERNAME: ${USERNAME}
             # - name: Log in to Registry
             #   run: |
             #     echo ${GH_TOKEN}
