--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -15,8 +15,6 @@ jobs:
             - name: Build image
               run: docker build . --file Dockerfile --tag ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
             - name: Log in to Registry
-              run: |
-                  echo ${{ secrets.GH_TOKEN }}
-                  docker login ${REGISTRY_URL} --username ${USERNAME} --password-stdin
+              run: docker login --username ${USERNAME} --password ${{ secrets.GH_TOKEN }} ${REGISTRY_URL}
             - name: Push image
               run: docker push ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
