--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,9 +1,14 @@
 name: test-workflow
 on:
     workflow_dispatch:
+        inputs:
+            tag:
+                description: 'Semantic version tag (format should be v[number].[number].[number])'
+                required: true
+                type: string
     push:
         tags:
-            - v*.*.*
+            - v[0-9]+.[0-9]+.[0-9]+
 env:
     USERNAME: m-rakic-vegait
     IMAGE_NAME: test-devops-app
@@ -13,11 +18,28 @@ jobs:
         runs-on: ubuntu-latest
         environment: test-devops-env
         steps:
-            - name: Checkout the repo
-              uses: actions/checkout@v4
-            - name: Build image
-              run: docker build . --file Dockerfile --tag ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
-            - name: Log in to Registry
-              run: docker login --username ${USERNAME} --password ${{ secrets.GH_TOKEN }} ${REGISTRY_URL}
-            - name: Push image
-              run: docker push ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:latest
+            # - name: Checkout the repo
+            #   uses: actions/checkout@v4
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  username: ${USERNAME}
+                  password: ${{ secrets.GH_TOKEN }}
+                  registry: ${REGISTRY_URL}
+
+            - name: Setup Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Buld image and push - workflow_dispatch
+              if: github.event_name == 'workflow_dispatch'
+              uses: docker/build-push-action@v6
+              with:
+                  push: true
+                  tags: ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:${{ inputs.tag }}
+            - name: Buld image and push - push
+              if: github.event_name == 'push'
+              uses: docker/build-push-action@v6
+              with:
+                  push: true
+                  tags: ${REGISTRY_URL}/${USERNAME}/${IMAGE_NAME}:${{ github.ref_name }}
