Changed package name back

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -33,10 +33,10 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                   push: true
-                  tags: ${{ env.IMAGE_NAME }}:${{ inputs.tag }}
+                  tags: ${{ env.REGISTRY_URL }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ inputs.tag }}
             - name: Buld image and push - push
               if: github.event_name == 'push'
               uses: docker/build-push-action@v6
               with:
                   push: true
-                  tags: ${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+                  tags: ${{ env.REGISTRY_URL }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
