--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -15,6 +15,7 @@ env:
     REGISTRY_URL: ghcr.io
 jobs:
     build-and-push-image:
+        if: (github.event_name == 'workflow_dispatch' && ${{ inputs.tag }} =~ v[0-9]+.[0-9]+.[0-9]+) || github.event_name == 'push'
         runs-on: ubuntu-latest
         environment: test-devops-env
         steps:
