--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -17,6 +17,7 @@ jobs:
     build-and-push-image:
         if: (github.event_name == 'workflow_dispatch' && ${{ inputs.tag }} =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/) || github.event_name == 'push'
         runs-on: ubuntu-latest
+        environment: test-devops-env
         steps:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
