--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -15,16 +15,13 @@ env:
     REGISTRY_URL: ghcr.io
 jobs:
     build-and-push-image:
-        if: (github.event_name == 'workflow_dispatch' && ${{ inputs.tag }} =~ /^v[0-9]+\.[0-9]+\.[0-9]+$/) || github.event_name == 'push'
         runs-on: ubuntu-latest
         environment: test-devops-env
         steps:
             - name: Test
               run: |
-                  echo "workflow_dispatch - tag: ${{ inputs.tag }}"
-                  echo "workflow_dispatch - username: ${{ env.USERNAME }}"
-                  echo "workflow_dispatch - event_name: ${{ github.event_name }}"
-                  echo "github.event_name == 'workflow_dispatch': ${{ github.event_name == 'workflow_dispatch' }}"
+                  echo "github.ref_name: ${{ github.ref_name }}"
+                  echo "github.ref_type: ${{ github.ref_type }}"
 
             - name: Login to Docker Hub
               uses: docker/login-action@v3
