--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -5,6 +5,7 @@ on:
             tag:
                 description: 'Semantic version tag (format should be v[number].[number].[number])'
                 required: true
+                default: 'latest'
                 type: string
     push:
         tags:
@@ -18,11 +19,6 @@ jobs:
         runs-on: ubuntu-latest
         environment: test-devops-env
         steps:
-            - name: Test
-              run: |
-                  echo "github.ref_name: ${{ github.ref_name }}"
-                  echo "github.ref_type: ${{ github.ref_type }}"
-
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
@@ -33,15 +29,18 @@ jobs:
             - name: Setup Docker Buildx
               uses: docker/setup-buildx-action@v3
 
+            - name: Set tag
+              id: tag-selector
+              run: |
+                  if [ ${{ github.ref_type }} == "tag" ]; then
+                    echo "tag=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
+                  else
+                    echo "tag=${{ inputs.tag }}" >> "$GITHUB_OUTPUT"
+                  fi
+
             - name: Buld image and push - workflow_dispatch
               if: github.event_name == 'workflow_dispatch'
               uses: docker/build-push-action@v6
               with:
                   push: true
-                  tags: ${{ env.REGISTRY_URL }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ inputs.tag }}
-            - name: Buld image and push - push
-              if: github.event_name == 'push'
-              uses: docker/build-push-action@v6
-              with:
-                  push: true
-                  tags: ${{ env.REGISTRY_URL }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+                  tags: ${{ env.REGISTRY_URL }}/${{ env.USERNAME }}/${{ env.IMAGE_NAME }}:${{ steps.tag-selector.outputs.tag }}
