--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -34,8 +34,7 @@ jobs:
               run: |
                   if [ ${{ github.ref_type }} == "tag" ]; then
                     echo "tag=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
-                  fi
-                  if [ ${{ github.ref_type }} != "tag" ]; then
+                  else
                     echo "tag=${{ inputs.tag }}" >> "$GITHUB_OUTPUT"
                   fi
 
